# tictactoe-rl

./: .gitignore  README.md  pyproject.toml
experiments/: minmax_play.json  random_play.json  self_play.json  standard.json
export/: model.json
models/minmax_play/: metrics.parquet  settings.json
models/minmax_play/checkpoint/: _sharding  manifest.ocdbt
models/minmax_play/checkpoint/ocdbt.process_0/: manifest.ocdbt
models/random_play/: metrics.parquet  settings.json
models/random_play/checkpoint/: manifest.ocdbt
models/random_play/checkpoint/ocdbt.process_0/: manifest.ocdbt
models/self_play/: metrics.parquet  settings.json
models/self_play/checkpoint/: manifest.ocdbt
models/self_play/checkpoint/ocdbt.process_0/: manifest.ocdbt
nb/: analysis.ipynb
search/358/: metrics.parquet  settings.json
search/358/checkpoint/: _sharding  checkpoint  manifest.ocdbt
search/358/checkpoint/ocdbt.process_0/: manifest.ocdbt
search/992/: metrics.parquet  settings.json
search/992/checkpoint/: _METADATA  manifest.ocdbt
tests/: model_test.py  observation_test.py
tictactoe_ai/: __init__.py  agent.py  agent_train.py  baseline.py  display.py  enjoy.py  hyper_parameter_search.py  observation.py  play.py  random_agent.py  random_player.py  reward.py  text_display.py  train.py  train_settings.py  transformer.py  util.py  win_recorder.py
tictactoe_ai/analysis/: analysis.py
tictactoe_ai/display/: visual_play.py
tictactoe_ai/export/: web.py
tictactoe_ai/extra/: xla_graph.py
tictactoe_ai/gamerules/: __init__.py  initialize.py  over.py  turn.py  types.py
tictactoe_ai/gamerules/types/: __init__.py  over.py  state.py
tictactoe_ai/metrics/: __init__.py  finished_reward_recorder.py  metrics_logger_np.py  metrics_recorder.py  types.py
tictactoe_ai/minimax/: minmax_gen.py  minmax_player.py
tictactoe_ai/minmax/: minmax_gen.py  minmax_loader.py  minmax_player.py  mixmax_loader.py
tictactoe_ai/model/: action_input.py  activation.py  actor_critic.py  actor_critic_model.py  agent_settings.py  entropy.py  initalize.py  mlp.py  run_settings.py
tictactoe_ai/model/metrics/: __init__.py  finished_reward_recorder.py  metrics_logger_np.py  metrics_recorder.py  type.py
tictactoe_ai/model_agent/: __init__.py  actor_critic_agent.py  observation.py  reward.py
tictactoe_ai/pygame_display/: constaints.py  rendering.py  visual_play.py
(+1 files in other folders)
