[tool.poetry]
name = "tictactoe-ai"
version = "0.1.0"
description = ""
authors = ["Gabriel keith <gabe.keith@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jax = {extras = ["cpu"], version = "^0.4.24"}
jaxtyping = "^0.2.25"
flax = "^0.8.1"
optax = "^0.1.9"
orbax-checkpoint = "^0.5.3"
mypy = "^1.8.0"
beartype = "^0.17.2"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
play = "tictactoe_ai.play:play"
graph = "tictactoe_ai.extra.xla_graph:main"
